<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, UFitActivity!</string>
    <string name="app_name">UFit</string>
    <string name="title">UFIT</string>
    <string name="machine_selection">Machine Selection</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
	<string name="barbells">Barbell</string> <!-- these names need to match those in the array below -->
	<string name="dumbbells">Dumbell</string>
	<string name="benchpress">Fitness Center Machines</string>
	<string name="chestfly">Machine</string>
	<string name="shoulderpress">Shoulder Press Machine</string>
	<string name="legpress">Leg Press</string>
	<string name="hamstringcurl">Hamstring Curl Machine</string>
	<string name="pulley">Pulley Machine</string> <!-- end here, for now [4/3/12] -->
	<string name="home_screen">Home Screen</string>
	<string name="user_name">User Name</string>
	<string name="today">Today</string>
	<string name="today_exercises">Today\'s Exercises</string>
	<string name="weekly">Weekly Planner</string>
	<string name="modify_profile">Modify Profile</string>
	<string name="profile_picture_descrip">Profile Picture</string>
	<string name="progress_report">Progress Report</string>
	<string name="pool">Pool</string>
	<string name="bike">Bike</string>
	<string name="elliptical">Elliptical</string>
	<string name="road">Road</string>
	<string name="path">Path</string>
	<string-array name="equipmentNames"> <!-- these names need to be the exact same as above -->
	    <item>Barbell</item>
	    <item>Dumbell</item>
	    <item>Machine</item>
	    <item>Pool</item>
	    <item>Bike</item>
	    <item>Elliptical</item>
	    <item>Road</item>
	    <item>Path</item>
	</string-array>
	<string-array name="MF">
	    <item>"M"</item>
	    <item>"F"</item>
	</string-array>
	<string-array name="daysoftheweek">
	    <item>"1"</item>
	    <item>"2"</item>
	    <item>"3"</item>
	    <item>"4"</item>
	    <item>"5"</item>
	    <item>"6"</item>
	    <item>"7"</item>
	</string-array>
	<string name="modify_options_screen">Modify Profile</string>
	<string name="modify_equipment">Modify Equipment</string>
	<string name="modify_exercises">Modify Exercises</string>
	<string name="modify_goals">Edit Profile</string>
	<string name="exercise_info">Exercise Information</string>		
	<string name="weekly_planner">Weekly Planner</string>
	<string name="monday">Day 2</string>
	<string name="tuesday">Day 3</string>
	<string name="wednesday">Day 4</string>
	<string name="thursday">Day 5</string>
	<string name="friday">Day 6</string>
	<string name="saturday">Day 7</string>
	<string name="sunday">Day 1</string>

	<string name="this_week">This Week</string>
	
	<string name="muscle_group_sun">Day 1</string>
	<string name="muscle_group_mon">Day 2</string>
	<string name="muscle_group_tue">Day 3</string>
	<string name="muscle_group_wed">Day 4</string>
	<string name="muscle_group_thu">Day 5</string>
	<string name="muscle_group_fri">Day 6</string>
	<string name="muscle_group_sat">Day 7</string>
	<string name="save">Save</string>
	<string name="exercise_steps">Running and biking with dogs always makes me nervous. Know your dog and their fitness level. Puppies and dogs under 2 years of age are still growing bones. I do not recommend running or biking with young dogs. </string>
	<string name="calories">calories</string>
	<string name="bmi">bmi</string>
	
	
</resources>