<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/background">



    <TextView
        android:layout_width="wrap_content"
        android:text="@string/machine_selection"
        android:textSize="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:textColor="#ff8c00"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"/>

    <CheckBox
        android:id="@+id/machineselect_checkbox_dumbbells"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dumbbells"
        android:textColor="#ff8c00"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <CheckBox
        android:id="@+id/machineselect_checkbox_barbells"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/barbells" 
        android:textColor="#ff8c00"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <CheckBox
        android:id="@+id/machineselect_checkbox_benchpress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/benchpress"
        android:textColor="#ff8c00"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="How many days a week are you willing to workout?"
        android:textColor="#ff8c00"
        android:textSize="15dp"
        android:textStyle="bold" android:layout_marginTop="20dp"/>



    <Spinner
        android:id="@+id/workdaysspinner"
        android:layout_width="98dp"
        android:layout_height="wrap_content" />

    
</LinearLayout>
    
    <Button
        android:id="@+id/machineselect_button_finish"
        android:layout_width="95dp"
        android:layout_height="60dp"
        android:text="@string/finish" 
        android:textSize="20dp"
        android:background="@drawable/orange_button_clickstates"
    	android:layout_alignParentBottom="true"
    	android:layout_alignParentRight="true"/>
</RelativeLayout>