<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/weekly_planner"
        android:textColor="#ff8c00"
        android:textSize="30dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/this_week"
        android:textColor="#ff8c00"
        android:textSize="25dp"
        android:textStyle="bold" />
        
    </LinearLayout>


    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.83"
        android:stretchColumns="1" >

        <TableRow>

            <TextView
                android:id="@+id/planner_textview_sunday"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/muscle_group_sun"
                android:textColor="#ff8c00"
                android:textSize="20dp"
                android:textStyle="bold"
                android:background="@drawable/basic_click_states" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/planner_textview_monday"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/muscle_group_mon"
                android:textColor="#ff8c00"
                android:textSize="20dp"
                android:background="@drawable/basic_click_states"
                android:textStyle="bold" />
        </TableRow>
        <TableRow>

            <TextView
                android:id="@+id/planner_textview_tuesday"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/muscle_group_tue"
                android:textColor="#ff8c00"
                android:textSize="20dp"
                android:background="@drawable/basic_click_states"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/planner_textview_wednesday"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/muscle_group_wed"
                android:textColor="#ff8c00"
                android:textSize="20dp"
                android:background="@drawable/basic_click_states"
                android:textStyle="bold" />
        </TableRow>
        <TableRow>

            <TextView
                android:id="@+id/planner_textview_thursday"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/muscle_group_thu"
                android:textColor="#ff8c00"
                android:textSize="20dp"
                android:background="@drawable/basic_click_states"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/planner_textview_friday"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/muscle_group_fri"
                android:textColor="#ff8c00"
                android:textSize="20dp"
                android:background="@drawable/basic_click_states"
                android:textStyle="bold" />
        </TableRow>
        <TableRow>

            <TextView
                android:id="@+id/planner_textview_saturday"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/muscle_group_sat"
                android:textColor="#ff8c00"
                android:textSize="20dp"
                android:background="@drawable/basic_click_states"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>
    
    <Button
        android:id="@+id/homescreenback"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:background="@drawable/orange_button_clickstates"
        android:text="Home Screen"
        android:textSize="20dp"
        android:textStyle="bold" />
</LinearLayout>