<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/modify_options_screen"
        android:textColor="#ff8c00"
        android:textSize="30dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView1"
            android:contentDescription="@string/profile_picture_descrip"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/profile_picture" />

        <TextView
            android:id="@+id/textview_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/user_name"
            android:textColor="#ff8c00"
            android:textSize="25dp"
            android:textStyle="bold" >
        </TextView>
    </LinearLayout>
    
        <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:layout_weight="1.5" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal" 
        android:weightSum="4"
        android:layout_weight="10" 
        android:gravity="center">
        
        <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical" 
        android:layout_weight="2" >
    
    <Button
        android:id="@+id/mod_equip"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@drawable/orange_button_clickstates"
        android:text="@string/modify_equipment"
        android:textSize="20dp"
        android:layout_weight="2.5" 
        android:textStyle="bold" />

    <Button
        android:id="@+id/mod_goals"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@drawable/orange_button_clickstates"
        android:text="@string/modify_goals"
        android:textSize="20dp"
        android:layout_weight="2.5" 
        android:textStyle="bold" />
    
    <Button
        android:id="@+id/mod_targetweight"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@drawable/orange_button_clickstates"
        android:text="Change Target Weight"
        android:textSize="20dp"
        android:layout_weight="2.5" 
        android:textStyle="bold" />

    <Button
        android:id="@+id/delete_profile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@drawable/orange_button_clickstates"
        android:text="Delete Profile"
        android:textSize="20dp"
        android:layout_weight="2.5" 
        android:textStyle="bold" />
</LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2" >
    </LinearLayout>
  	<Button
  	    android:visibility="gone"
        android:id="@+id/button0"
        android:layout_gravity="right"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="@string/save" 
        android:background="@drawable/button_orange"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2" >
    </LinearLayout>
       
        
</LinearLayout>