<<<<<<< HEAD
<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/modify_options_screen"
        android:textColor="#ff8c00"
        android:textSize="30dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/profile_picture" />

        <TextView
            android:id="@+id/editText1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/user_name"
            android:textColor="#ff8c00"
            android:textSize="25dp"
            android:textStyle="bold" >
        </TextView>
    </LinearLayout>
    
        <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:layout_weight="1.5" >
    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@drawable/button_orange"
        android:text="@string/modify_equipment"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@drawable/button_orange"
        android:text="@string/modify_goals"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button3"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@drawable/button_orange"
        android:text="@string/modify_exercises"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2" >
    </LinearLayout>
    
  	<Button
        android:id="@+id/button0"
        android:layout_gravity="right"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="@string/next" 
        android:background="@drawable/button_orange"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2" >
    </LinearLayout>
       
        
=======
<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/modify_options_screen"
        android:textColor="#ff8c00"
        android:textSize="30dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/profile_picture" />

        <TextView
            android:id="@+id/editText1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/user_name"
            android:textColor="#ff8c00"
            android:textSize="25dp"
            android:textStyle="bold" >
        </TextView>
    </LinearLayout>
    
        <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:layout_weight="1.5" >
    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@drawable/button_orange"
        android:text="@string/modify_equipment"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@drawable/button_orange"
        android:text="@string/modify_goals"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button3"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@drawable/button_orange"
        android:text="@string/modify_exercises"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2" >
    </LinearLayout>
    
  	<Button
        android:id="@+id/button0"
        android:layout_gravity="right"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="@string/next" 
        android:background="@drawable/button_orange"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2" >
    </LinearLayout>
       
        
>>>>>>> 180cbc7875dbaee7cbc88a1c7fb8d34ad8510e83
</LinearLayout>